--- a/app/bower.json
+++ b/app/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.8",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-route": "^1.5.8"
   }
 }
