--- a/app/bower.json
+++ b/app/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-component-router": "^0.2.1"
   }
 }
